# ctc_prob

ctc_forward_prob/: setup.py
ctc_forward_prob/mlu_custom_ext/mlu/include/: ctc_forward_prob.h  custom_ops.h  kernel.h
ctc_forward_prob/mlu_custom_ext/mlu/src/: ctc_forward_prob.cpp  ctc_forward_prob_kernel.mlu
yd_conformer_plugin/: CMakeLists.txt  README.md  build.sh
yd_conformer_plugin/common/: helper_func.h  macros.h
yd_conformer_plugin/pluginops/plugin_attn_op/: plugin_attn.cc  plugin_attn.h
yd_conformer_plugin/pluginops/plugin_attn_proj_in_op/: plugin_attn_proj_in.cc  plugin_attn_proj_in.h
yd_conformer_plugin/pluginops/plugin_attn_proj_out_op/: plugin_attn_proj_out.cc  plugin_attn_proj_out.h
yd_conformer_plugin/pluginops/plugin_ffn_op/: plugin_ffn.cc  plugin_ffn.h
